--- a/low-battery-level-detection-notification-for-all-battery-sensors.yaml
+++ b/low-battery-level-detection-notification-for-all-battery-sensors.yaml
@@ -49,7 +49,7 @@ blueprint:
         the names of sensors being low on battery.
       selector:
         action: {}
-  source_url: https://gist.github.com/sbyx/1f6f434f0903b872b84c4302637d0890
+  source_url: https://github.com/Marck/home-assistant-blueprints/blob/main/low-battery-level-detection-notification-for-all-battery-sensors.yaml
 variables:
   day: !input 'day'
   threshold: !input 'threshold'
