--- a/low-battery-level-detection-notification-for-all-battery-sensors.yaml
+++ b/low-battery-level-detection-notification-for-all-battery-sensors.yaml
@@ -73,7 +73,7 @@ variables:
         {% set result.sensors = result.sensors + [state.name] %}
       {% endif %}
     {% endfor %}
-    {{result.sensors|join(', ')}}"
+    {{result.sensors|join('\n')}}"
 trigger:
 - platform: time
   at: !input 'time'
