Fixed empty variable check, format and more logical conditions

--- a/low-battery-level-detection-notification-for-all-battery-sensors.yaml
+++ b/low-battery-level-detection-notification-for-all-battery-sensors.yaml
@@ -62,7 +62,7 @@ variables:
       {% if 0 <= state.state | int(-1) < threshold | int 
         and not state.entity_id in exclude.entity_id
         and state.entity_id not in integration_entities("mobile_app") %}
-        {% set result.sensors = result.sensors + [state.name ~ ' (' ~ state.state ~ ' %)'] %}
+        {% set result.sensors = result.sensors + [state.name ~ ' (' ~ state.state ~ '%)'] %}
       {% endif %}
     {% endfor %}
     {% for state in states.binary_sensor
@@ -77,9 +77,14 @@ variables:
 trigger:
 - platform: time
   at: !input 'time'
-condition:
-- '{{ sensors != '''' and (day | int == 0 or day | int == now().isoweekday()) }}'
+condition:  []
 action:
-- choose: []
-  default: !input 'actions'
+  - if:
+    - condition: template
+      alias: Check if sensors variable is not empty.
+      value_template: "{{ sensors != '''' }}"
+    - condition: template
+      alias: Check if day is everyday or current day.
+      value_template: "{{ day | int == 0 or day | int == now().isoweekday() }}"
+    then: !input 'actions'
 mode: single
