--- a/low-battery-level-detection-notification-for-all-battery-sensors.yaml
+++ b/low-battery-level-detection-notification-for-all-battery-sensors.yaml
@@ -36,7 +36,7 @@ blueprint:
     exclude:
       name: Excluded Sensors
       description: Battery sensors (e.g. smartphone) to exclude from detection. Only
-        entities are supported, devices must be expanded!
+        entities and labels are supported, devices must be expanded!
       default:
         entity_id: []
       selector:
